--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work 1.jpg">
+                <img src="images/Work 1.jpg">
                 <div class="layer">
                     <h3>ecom website</h3>
                     <p>The website helps you to find products that you want from your home. go sign up and order products you like. </p>
