added project to my work

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/Work 1.jpg">
+                <img src="images/project1.png">
                 <div class="layer">
-                    <h3>ecom website</h3>
-                    <p>The website helps you to find products that you want from your home. go sign up and order products you like. </p>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                   <p><a href="https://golemancer-ctrl.github.io/project-wikiview/">Visit project-wikiview</a></p>
                 </div>
             </div>
             <div class="small-projects">
