--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
             <div class="small-projects">
              <div class="small work">
        
-                  <img src="images/work 2.jpg">
+                  <img src="images/project2.png">
                 <div class="layer">
-                    <h3>job website</h3>
-                    <p>The website connects you the talented people around the world to show your work and collabrates your work go sign up and check it </p>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                <p><a href="https://wdiwd-app.herokuapp.com/"> Visit Project-WDIWD</a></p>
+                    
                 </div>
             </div>
             <div class="small work">
